--- a/.config/BraveSoftware/SED/css/main.css
+++ b/.config/BraveSoftware/SED/css/main.css
@@ -15,6 +15,8 @@ body {
   align-items: center;
   justify-content: center;
   background: #131519;
+  background-image: url("./img/background.png");
+  background-size: 1920px 1080px;
   color: #fff; }
 
 .main {
